# 2025_hero_vision

./: .gitignore  README.md
src/camera/camera_core/: CMakeLists.txt  package.xml
src/camera/camera_core/config/: config.yaml
src/camera/camera_core/include/: util.hpp
src/camera/camera_core/launch/: camera.launch.py
src/camera/camera_core/src/: camera_core.cpp
src/camera/camera_core/test/: test_node_startup.cpp
src/camera/hikcamera/: CMakeLists.txt
src/camera/hikcamera/include/hikcamera/: image_capturer.hpp
src/camera/hikcamera/src/: image_capturer.cpp
src/hikcamera/include/hikcamera/: image_capturer.hpp
src/hikcamera/src/: image_capturer.cpp
src/rm_auto_aim/armor_detector/: CMakeLists.txt  package.xml
src/rm_auto_aim/armor_detector/config/: config.yaml
src/rm_auto_aim/armor_detector/include/: camera.hpp  utility.hpp
src/rm_auto_aim/armor_detector/launch/: detector.launch.py
src/rm_auto_aim/armor_detector/src/: detector.cpp  detector_node.cpp  number_classifier.cpp
src/rm_auto_aim/armor_tracker/src/: extended_kalman_filter.cpp  tracker.cpp  tracker_node.cpp
src/rm_auto_aim/auto_aim_interfaces/: CMakeLists.txt
src/rm_auto_aim/auto_aim_interfaces/msg/: DetectColor.msg
src/rm_gimbal_description/urdf/: rm_gimbal.urdf.xacro
src/rm_serial_driver/include/rm_serial_driver/: packet.hpp  rm_serial_node.hpp  serial_port.hpp
src/rm_serial_driver/include/util/: serial_parser.hpp
src/rm_serial_driver/src/: rm_serial_node.cpp
src/rm_vision/rm_vision_bringup/config/: camera_info.yaml  launch_params.yaml  node_params.yaml
(+8 files in other folders)
